	  the basic STR-P711 port is complete.
	* configs/olimex-strp711/nsh:  Add and verifed a NuttShell (NSH) configuration
	  for the STR-P711.
	* arch/arm/str71x/str71x_serial.c:  The STR711 interrupt driven serial driver
	  finally works after some extradinary measures to handle missed interrupts.
	  NSH is fully functional on the Olimex STR-P711 board.
	* example/nsh: Moved architecture specific files from NSH directory to board-
	  specific directories.
	* config/olimex-strp711/src/up_nsh.c:  Add an NSH board specific directory for
	  for the Olimex STR7P11 board.
	* Fixed build of LM3X6918 using the CodeSourcery Windows native toolchain.  There
	  were lots of issues with Cygwin paths and Cygwin symbolic links.  These changes
	  may work with the devarmKIT as well, but that remains untested.
	* The NXP LPC2148 and STR711 targets can now also be built using the CodeSourcery
	  or devkitARM Windows native toolchains.

0.4.8 2009-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* Add strtoll() and strtoull(); Add macros for atol() and atoll().
	* dup() and dup2() will now clone socket descriptors
	* All socket descriptors ar now cloned when when a new task is started
	  via task_create().
	* Add configuration options to suppress or eliminate cloning of file
	  and/or socket descriptors when a new task is started by task_create():
	  CONFIG_FDCLONE_DISABLE, CONFIG_FDCLONE_STDIO, CONFIG_SDCLONE_DISABLE.
	* Use of C++ reserved word 'private' in C header files causes problems
	  for C++ that include them.
	* Added 'binfmt' support to allow execution of programs in a file system,
	  binding to NuttX symbols. A custom format call NXFLAT is used; this
	  derives from http://xflat.sourceforge.net.  At present is supports on
	  XIP execution from ROMFS file systems.  Initial check-in is untested
	  and probably breaks many builds.
	* examples/lib: Added qsort()
	* examples/nxflat: Added support for symbol tables


