@@ -1483,6 +1483,10 @@ nuttx-0.4.9 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  and probably breaks many builds.
 	* examples/lib: Added qsort()
 	* examples/nxflat: Added support for symbol tables
+	* Correct logic that creates compiler include paths.  On Cygwin, the
+	  include paths for Cygwin-based GCC were being converted to windows
+	  native paths.  That causes many problems -- breaking dependencies
+	  for one.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
